--- a/BBM/home/templates/home/filter.html
+++ b/BBM/home/templates/home/filter.html
@@ -10,6 +10,7 @@
 {%endblock%}
 
 {%block content%}
+{%include '../filter.html' %}
 <div class="row g-4">
     {% for court in courts %}
     <div class="col-lg-4 col-md-6 wow fadeInUp">
