--- a/BBM/home/templates/navbar.html
+++ b/BBM/home/templates/navbar.html
@@ -34,7 +34,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">{{user.first_name}} {{user.last_name}}</a>
                     <div class="dropdown-menu rounded-0 m-0">
-                        <a href="{% url 'logout' %}" class="dropdown-item">Chi tiết thông tin</a>
+                        <a href="{% url 'userdetail' %}" class="dropdown-item">Chi tiết thông tin</a>
                         <a href="{% url 'logout' %}" class="dropdown-item">Đăng xuất</a>
                     </div>
                 </div>
