--- a/BBM/home/templates/navbar.html
+++ b/BBM/home/templates/navbar.html
@@ -1,7 +1,7 @@
 {%load static%}
 <div class="container-fluid nav-bar bg-transparent">
     <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
-        <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
+        <a href="{% url 'role' %}" class="navbar-brand d-flex align-items-center text-center">
             <!-- <div class="icon p-2 me-2">
                 <img class="img-fluid" src="{%static 'home/img/logo-1.png' %}" alt="Icon" style="width: 30px; height: 30px;">
             </div> -->
@@ -29,7 +29,7 @@
             </div>
             {% if user.is_authenticated %} 
                 <div class="navbar-nav ms-auto"><div class="navbar-nav ms-auto">
-                    <a href="index.html" class="nav-item nav-link active">Lịch sử đặt sân</a>
+                    <a href="{% url 'his' %}" class="nav-item nav-link active">Lịch sử đặt sân</a>
                 </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">{{user.first_name}} {{user.last_name}}</a>
