--- a/BBM/home/templates/home/Tongtien.html
+++ b/BBM/home/templates/home/Tongtien.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Đăng Ký Đặt Sân Cầu Lông</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="booking.css">
+    <link rel="stylesheet" href="{% static 'home/css/booking.css' %}">
     <style>    
     </style>
 </head>
@@ -19,15 +20,18 @@
             </div>
             <div class="card-body">
                 <form id="bookingForm" method="POST">
-
                     <div class="form-group">
-                        <label>Số giờ muốn đặt</label>
-                        <input type="text" placeholder="Nhập số giờ">
+
+                        <!-- Hiển thị số tiền cần trả -->
+                        <div class="mt-3">
+                            <label for="amount">Số Tiền Cần Phải Trả (VNĐ):</label>
+                            <input type="text" id="amount" value="0" readonly class="form-control">
+                        </div>
                     </div>
 
                     <div class="button-container">
-                        <a href="booking.html"><button type="button" class="a.btn-left">Quay về</button></a>
-                        <a href="InputDiscount.html"><button type="button" class="a.btn-right">Tiếp theo</button></a>
+                        <a href=""><button type="button" class="a.btn-left">Quay về</button></a>
+                        <a href=""><button type="button" class="a.btn-right">Xác nhận thanh toán</button></a>
                     </div>
 
                 </form>
@@ -35,3 +39,5 @@
         </div>
     </div>
 </div>
+
+<script src="{% static 'home/js/booking.js' %}"></script>
