--- a/BBM/home/templates/home/booking.html
+++ b/BBM/home/templates/home/booking.html
@@ -3,35 +3,37 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Title Page-->
     <title>Đăng Ký Đặt Sân Cầu Lông</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'home/css/booking.css' %}">
+    <style>    
+    </style>
 </head>
 
 <body>
-    <div class="page-wrapper bg-gra-01 p-t-45 p-b-50">
-        <div class="wrapper wrapper--w790">
-            <div class="card card-5">
-                <div class="card-heading">
+    <div class="page-wrapper">
+        <div class="wrapper">
+            <div class="card">
+                <div class="card-heading text-center">
                     <h2 class="title">Đăng Ký Đặt Sân Cầu Lông</h2>
                 </div>
                 <div class="card-body">
                     <form id="bookingForm" method="POST">
-                        <div class="form-group">
-                            <a href="home/fixedBooking.html" class="btn">Đặt lịch cố định</a>
-                            <a href="{% url 'dailyBooking' court.maCourt %}" class="btn">Đặt lịch theo ngày</a>
-                            <a href="home/flexibleBooking.html" class="btn">Đặt lịch linh hoạt</a>
+                        <div class="d-grid gap-3">
+                            <a href="FixedBooking.html"><button type="button" class="btn btn-custom">Đặt lịch cố định</button></a>
+                            <a href="{%url 'dateBooking' court.maCourt %}"><button type="button" class="btn btn-custom">Đặt lịch theo ngày</button></a>
+                            <a href="FlexibleBooking.html"><button type="button" class="btn btn-custom">Đặt lịch linh hoạt</button></a>
                         </div>
                     </form>
                 </div>
             </div>
+
+            <!-- Nội dung load động -->
+            <div id="page-content" class="mt-4"></div>
         </div>
     </div>
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</body>
 
 </html>
-<!-- end document-->
