--- a/BBM/home/templates/home/flexibleBooking.html
+++ b/BBM/home/templates/home/flexibleBooking.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Title Page-->
     <title>Đăng Ký Đặt Sân Cầu Lông</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="booking.css">
+    <style>    
+    </style>
 </head>
 
 <body>
@@ -20,14 +20,13 @@
                 </div>
                 <div class="card-body">
                     <form id="bookingForm" method="POST">
-                        <div class="form-group">
-                            <a href="hourType.html" class="btn">Đặt lịch cố định</a>
-                            <a href="calendarType.html" class="btn">Đặt lịch theo ngày</a>
+                        <div class="d-grid gap-3">
+                            <a href="HourType.html"><button type="button" class="btn btn-custom">Thêm giờ</button></a>
+                            <a href="CalendarType.html"><button type="button" class="btn btn-custom">Thêm lịch</button></a>
                         </div>
 
-                        <div class="button-container">
-                            <a href="booking.html" class="btn btn-left">Quay lui</a>
-                            <a href="flexibleBooking.html" class="btn btn-right">Tiến tới</a>
+                        <div class="button-container mt-3">
+                            <a href="booking.html"><button type="button" class="a.btn-left">Quay về</button></a>
                         </div>
 
                     </form>
