--- a/BBM/home/templates/home/Tongtien.html
+++ b/BBM/home/templates/home/Tongtien.html
@@ -20,20 +20,17 @@
             </div>
             <div class="card-body">
                 <form id="bookingForm" method="POST">
+                    {%csrf_token%}
                     <div class="form-group">
-
                         <!-- Hiển thị số tiền cần trả -->
                         <div class="mt-3">
-                            <label for="amount">Số Tiền Cần Phải Trả (VNĐ):</label>
-                            <input type="text" id="amount" value="0" readonly class="form-control">
+                            <label for="amount">Số Tiền Cần Phải Trả (VNĐ): {{tien}}đ</label>
                         </div>
                     </div>
-
                     <div class="button-container">
-                        <a href=""><button type="button" class="a.btn-left">Quay về</button></a>
-                        <a href=""><button type="button" class="a.btn-right">Xác nhận thanh toán</button></a>
+                        <a href="{%url 'voucher' maCourt tp ts d s%}"><button type="button" class="a.btn-left">Quay về</button></a>
+                        <button type="submit" class="a.btn-right">Xác nhận thanh toán</button>
                     </div>
-
                 </form>
             </div>
         </div>
