--- a/BBM/home/templates/home/detail.html
+++ b/BBM/home/templates/home/detail.html
@@ -28,7 +28,7 @@
                             <p><i class="fa fa-map-marker-alt text-primary me-2"></i>{{court.address}}</p>
                         </div>
 
-                        <p><strong style="color: #0e2e50;">Sân:</strong> 5 sân</p>
+                        <p><strong style="color: #0e2e50;">Sân:</strong> {{san}} sân</p>
                         <h6>Description:</h6>
                         <p>{{court.decription}}</p>
 
@@ -44,7 +44,6 @@
                                 </div>
                             </div>
                         </form>
-
                     </div>
                 </div>
             </div>
