--- a/BBM/home/templates/home/changepasdone.html
+++ b/BBM/home/templates/home/changepasdone.html
@@ -1,1 +1,33 @@
-<p>Xác nhận</p>
+{%load static%}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Đăng Ký Đặt Sân Cầu Lông</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+</head>
+
+<div class="container text-center">
+    <h2 class="text-success">Đổi mật khẩu thành công!</h2>
+    <p>Bạn đã đổi mật khẩu thành công. Chúc bạn có một ngày tốt lành!</p>
+    <a href="{%url 'role'%}"><button type="button" class="btn btn-custom">Trở về trang chủ</button></a>
+</div>
+
+<style>
+.btn-custom {
+width: 100%;
+padding: 12px;
+font-size: 16px;
+font-weight: bold;
+color: white;
+border-radius: 8px;
+transition: all 0.3s ease;
+text-align: center;
+}
+    
+.btn-custom:nth-child(1) {
+ background: #00B98E;
+}
+</style>
