--- a/BBM/home/templates/home/history.html
+++ b/BBM/home/templates/home/history.html
@@ -32,9 +32,9 @@
                     {% endif %}
                 </p>
                 <p><strong>Trạng thái: </strong>
-                    {% if ve.checkin == 'dacheckin' %}
+                    {% if ve.checkin == 'da_checkin' %}
                         Đã check-in
-                    {% elif ve.checkin == 'chuacheckin' %}
+                    {% elif ve.checkin == 'chua_checkin' %}
                         Chưa check-in
                     {% endif %}
                 </p>
