--- a/BBM/home/templates/home/history.html
+++ b/BBM/home/templates/home/history.html
@@ -34,7 +34,7 @@
                 <p><strong>Trạng thái: </strong>
                     {% if ve.checkin == 'dacheckin' %}
                         Đã check-in
-                    {% elif ve.checkin == 'chua_checkin' %}
+                    {% elif ve.checkin == 'chuacheckin' %}
                         Chưa check-in
                     {% endif %}
                 </p>
