--- a/BBM/home/templates/r2navbar.html
+++ b/BBM/home/templates/r2navbar.html
@@ -5,8 +5,8 @@
             Xin chào, {{user.first_name}} {{user.last_name}}
         </span>
         <ul class="dropdown-menu dropdown-menu-end shadow-lg" aria-labelledby="staffDropdown">
-            <li><a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Thông tin người dùng</a></li>
-            <li><a class="dropdown-item text-danger" href="#"><i class="fas fa-sign-out-alt"></i> Đăng xuất</a></li>
+            <li><a class="dropdown-item" href="{%url 'userdetail2'%}"><i class="fas fa-cog"></i> Thông tin người dùng</a></li>
+            <li><a class="dropdown-item text-danger" href="{%url 'logout'%}"><i class="fas fa-sign-out-alt"></i> Đăng xuất</a></li>
         </ul>
     </div>
 </nav>
