--- a/BBM/home/templates/navbarM.html
+++ b/BBM/home/templates/navbarM.html
@@ -15,3 +15,10 @@
         </div>
     </nav>
 </div>
+
+<script>
+    document.getElementById("menu-toggle").addEventListener("click", function() {
+        document.body.classList.toggle("sidebar-hidden");
+        document.body.classList.toggle("sidebar-visible");
+    });
+</script>
