--- a/BBM/home/templates/sidebar.html
+++ b/BBM/home/templates/sidebar.html
@@ -4,45 +4,45 @@
         <div class="list-group-item" onclick="this.classList.toggle('active')">
             <i class="fas fa-basketball-ball"></i> Sân Cầu Lông
             <div class="submenu">
-                <a href="#" class="text-white d-block" onclick="loadPage('load_add_court')">Thêm Sân</a>
-                <a href="#" class="text-white d-block" onclick="loadPage('load_manage_court')">Quản Lý Sân</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('load_add_court')">Thêm Sân</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('load_manage_court')">Quản Lý Sân</a>
             </div>
         </div>
         <div class="list-group-item" onclick="this.classList.toggle('active')">
             <i class="fas fa-calendar"></i> Đặt Sân
             <div class="submenu">
-                <a href="#" class="text-white d-block" onclick="loadPage('load_time_slot')">Đặt Khung Giờ</a>
-                <a href="#" class="text-white d-block" onclick="loadPage('load_pricing')">Cài Đặt Giá</a>
-                <a href="#" class="text-white d-block" onclick="loadPage('load_policy')">Chính Sách</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('load_time_slot')">Đặt Khung Giờ</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('load_pricing')">Cài Đặt Giá</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('load_policy')">Chính Sách</a>
             </div>
         </div>
         <div class="list-group-item" onclick="this.classList.toggle('active')">
             <i class="fas fa-user"></i> Nhân Viên
             <div class="submenu">
-                <a href="#" class="text-white d-block" onclick="loadPage('{% url 'xetduyetNhanVien' %}')">Xét Duyệt</a>
-                <a href="#" class="text-white d-block" onclick="loadPage('{% url 'staffList' %}')">Danh Sách</a>
-                <a href="#" class="text-white d-block" onclick="loadPage('{% url 'chamCong' %}')">Chấm Công</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('{% url 'xetduyetNhanVien' %}')">Xét Duyệt</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('{% url 'staffList' %}')">Danh Sách</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('{% url 'chamCong' %}')">Chấm Công</a>
             </div>
         </div>
         <div class="list-group-item" onclick="this.classList.toggle('active')">
             <i class="fas fa-trophy"></i> Lịch Thi Đấu
             <div class="submenu">
-                <a href="#" class="text-white d-block" onclick="loadPage('confirm-booking.html')">Xác Nhận Đặt Sân</a>
-                <a href="#" class="text-white d-block" onclick="loadPage('tournament.html')">Tạo Giải Đấu</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('confirm-booking.html')">Xác Nhận Đặt Sân</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('tournament.html')">Tạo Giải Đấu</a>
             </div>
         </div>
         <div class="list-group-item" onclick="this.classList.toggle('active')">
             <i class="fas fa-chart-bar"></i> Doanh Thu
             <div class="submenu">
-                <a href="#" class="text-white d-block" onclick="loadPage('{% url 'Revenue' %}')">Thống Kê</a>
-                <a href="#" class="text-white d-block" onclick="loadPage('{% url 'payment' %}')">Thanh Toán</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('{% url 'Revenue' %}')">Thống Kê</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('{% url 'payment' %}')">Thanh Toán</a>
             </div>
         </div>
         <div class="list-group-item" onclick="this.classList.toggle('active')">
             <i class="fas fa-gift"></i> Khuyến Mãi
             <div class="submenu">
-                <a href="#" class="text-white d-block" onclick="loadPage('add-promo.html')">Thêm Khuyến Mãi</a>
-                <a href="#" class="text-white d-block" onclick="loadPage('vip.html')">Khách Hàng VIP</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('add-promo.html')">Thêm Khuyến Mãi</a>
+                <a href="#" class="text-black d-block" onclick="loadPage('vip.html')">Khách Hàng VIP</a>
             </div>
         </div>
     </div>
